aks/1_secrets.yml
apiVersion: v1
kind: Namespace
metadata:
  name: #{EnvironmentName}#
