aks/3_tls_ingress.yml
apiVersion: v1
kind: Service
metadata: 
  name: backend
spec:
  ports:
  - port: 80
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend
spec:
  ports:
  - port: 80
  selector:
    app: frontend
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: yourregistry.azurecr.io/backend:#{Release.Artifacts.Backend.BuildId}#
        ports:
        - containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 10%
      maxSurge: 25%
  minReadySeconds: 10
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: yourregistry.azurecr.io/frontend:#{Release.Artifacts.Frontend.BuildId}#
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: people
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  tls:
  - hosts:
    - yourdomain.com
    secretName: tls-people-secret
  rules:
  - host: yourdomain.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
